@@ -1,3 +1,12 @@
+2021-05-18  Aakash Jain  <aakash_jain@apple.com>
+
+        [ews] Style fixes in steps_unittest.py
+        https://bugs.webkit.org/show_bug.cgi?id=225932
+
+        Reviewed by Jonathan Bedard.
+
+        * CISupport/ews-build/steps_unittest.py:
+
 2021-05-18  Jonathan Bedard  <jbedard@apple.com>
 
         [lint-test-expectations] Change shebang to Python 3
